# gwtails

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/source/: conf.py  contributing.rst  index.rst  installation.rst
docs/source/api/: bayesian_tails.rst  index.rst
docs/source/notebooks/: index.rst  tail_analysis_bayesian.ipynb
example/: tail_analysis_example.ipynb
gwtails/: __init__.py  auxiliary.py  bayesian_tails.py  tails.py
